--- a/build.gradle
+++ b/build.gradle
@@ -19,11 +19,8 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.webjars:webjars-locator-core'
-    implementation 'org.webjars:sockjs-client:1.0.2'
-    implementation 'org.webjars:stomp-websocket:2.3.3'
-    implementation 'org.webjars:bootstrap:3.3.7'
-    implementation 'org.webjars:jquery:3.1.1-1'
+
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-websocket', version: '2.5.6'
     implementation 'org.springframework.boot:spring-boot-starter'
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
